# spark-connect

./: README.md  config.md  pyproject.toml
docker/: Dockerfile  spark-connect-server  start-server.sh
spark_connect/: __init__.py  constants.py  exceptions.py  utils.py
spark_connect/config/: builder.py  configer.py  k8s.py
spark_connect/server/: cli.py  daemon.py  k8s_spark_connect_server.py  tailer.py
spark_connect/sql/: __init__.py  magic.py
